--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "color.js": "^1.2.0",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.3",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-shimmer": "^3.2.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.3.1",
