--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
     "color.js": "^1.2.0",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.3",
+    "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-shimmer": "^3.2.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "speakingurl": "^14.0.1",
     "swiper": "^8.3.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
